<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    tools:context=".ui.CreateShelterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"  >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40sp"
            android:text="Добавление приюта"
            android:textAlignment="center"
            style="@style/TextAppearance.MaterialComponents.Headline5" />

        <!--    Title    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_shelter_fragment_title_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="Название"
            app:helperTextEnabled="true"
            app:helperText="Поле обязательно"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_shelter_fragment_title_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--    VK link    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_shelter_fragment_vk_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="ВКонтакте"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true"
            app:helperText="Ссылка на сообщество в социальной сети ВКонтакте. Поле обязательно, если не указан веб-сайт"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_shelter_fragment_vk_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Site link    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_shelter_fragment_site_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="Веб-сайт"
            app:helperTextEnabled="true"
            app:helperText="Ссылка на веб-сайт. Поле обязательно, если не указано сообщество во ВКонтакте"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_shelter_fragment_site_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Submit button    -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_shelter_fragment_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Добавить приют"
            android:layout_gravity="center" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>