...
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_nav"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/profile_nav"/>
</menu>
