...
                android:text="Поддерживаемые приюты"
                android:textSize="12sp"
                style="?attr/materialButtonOutlinedStyle" />

            <!--    Create shelter    -->
            <Button
                android:id="@+id/profile_fragment_create_shelter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Добавить приют"
                android:textSize="12sp"
                style="?attr/materialButtonOutlinedStyle" />
...
