<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40sp"
            android:textAlignment="center"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="Восстановления пароля" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20sp"
            android:textAlignment="center"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="Для восстановления пароля укажите почту, на которое мы сможем отправить Вам письмо для сброса пароля" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_password_fragment_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:hint="Почта"
            app:helperTextEnabled="true"
            app:helperText="Поле обязательно"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_password_fragment_email_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password_fragment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Отправить письмо" />
    </LinearLayout>
</FrameLayout>