<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".ui.SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/sign_in_fragment_circular_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

        <LinearLayout
            android:id="@+id/sign_in_fragment_form_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:textAlignment="center"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:text="Вход в аккаунт" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_in_fragment_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="Почта"
                app:helperTextEnabled="true"
                app:helperText="Поле обязательно"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_in_fragment_email_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_in_fragment_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="Пароль"
                app:helperTextEnabled="true"
                app:helperText="Поле обязательно"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_in_fragment_password_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_in_fragment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Войти" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_fragment_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginTop="10dp"
                android:text="Забыли пароль?" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>